<resources>
    <string name="app_name">MaterialDesign</string>
    <string name="Button1">GO</string>
    <string name="PlainText1" />
    <string name="PlainText2">Type the second number:</string>
    <string name="PlainText3">Type the first number:</string>
    <string name="Button2">+</string>
    <string name="Button3">-</string>
    <string name="Button4">/</string>
    <string name="Button5">*</string>
    <string name="plainText" />
    <string name="textView_2">Resultado:</string>
</resources>
