<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Actividida1" >

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/textView_2"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/textView4"
        android:gravity="center"
        android:text="@string/PlainText1"
        android:textSize="60sp"
        tools:text="@string/PlainText1" />

    <com.gc.materialdesign.views.ButtonRectangle
        android:id="@+id/button1"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_width="200dp"
        android:layout_below="@id/textView"
        android:layout_height="wrap_content"
        android:background="#1E88E5"
        android:text="@string/Button2"
        android:textSize="30sp"/>

    <com.gc.materialdesign.views.ButtonRectangle
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_marginStart="210dp"
        android:layout_marginLeft="210dp"
        android:background="#1E88E5"
        android:text="@string/Button3"
        android:textSize="30sp" />

    <com.gc.materialdesign.views.ButtonRectangle
        android:id="@+id/button3"
        android:layout_width="200dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/button1"
        android:layout_height="wrap_content"
        android:background="#1E88E5"
        android:text="@string/Button4"
        android:textSize="30sp"/>

    <com.gc.materialdesign.views.ButtonRectangle
        android:id="@+id/button4"
        android:layout_width="200dp"
        android:layout_marginStart="210dp"
        android:layout_marginLeft="210dp"
        android:layout_below="@id/button2"
        android:layout_height="wrap_content"
        android:background="#1E88E5"
        android:text="@string/Button5"
        android:textSize="30sp" />

</RelativeLayout>